--- a/about.html
+++ b/about.html
@@ -3,15 +3,16 @@
 
 <!--Page Head Title, and Metadata-->
 	<head>
-		<title>Alan Hernandez, About</title>
 		<meta name="keywords" content="Alan, About, Goals, Skills"/>
 		<meta charset="UTF-8" />
+		<link href="main.css" rel="stylesheet">
+		<title>Alan Hernandez, About</title>
 	</head>
 
 <!--Page Body-->
 	<body>
 <!--Main Header-->
-		<h1>Alan Hernandez</h1>
+		<header><h1>Alan Hernandez</h1></header>
 <!--Navigation Menu-->
 		<nav>
 			<ul>
@@ -20,33 +21,40 @@
 				<li><a href="#">School</a></li>
 			</ul>
 		</nav>
-<!--Second Header-->
-		<h2>Goals</h2>
-<!--A List of my Academic Goals -->
-		<ol>
-			<li>Learn more about HTML and CSS. (In progress)</li>
-			<li>Complete this class to meet the prerequisite for the JavaScript Classes. (Also in progress)</li>
-			<li>Learn JavaScript.</li>
-			<li>Learn more about web development in general. (Still in progress)</li>
-			<li>Obtain a certification in Client-Side Website Development.</li>
-		</ol>
 
+<!--Section 01-->
+		<section>
+<!--Second Header-->
+			<h2>Goals</h2>
+<!--A List of my Academic Goals.-->
+			<ol>
+				<li>Learn more about HTML and CSS. (In progress)</li>
+				<li>Complete this class to meet the prerequisite for the JavaScript Classes. (Also in progress)</li>
+				<li>Learn JavaScript.</li>
+				<li>Learn more about web development in general. (Still in progress)</li>
+				<li>Obtain a certification in Client-Side Website Development.</li>
+			</ol>
+		</section>
+
+<!--Section 02-->
+		<section>
 <!--Third Header-->
-		<h3>Skills</h3>
+			<h3>Skills</h3>
 <!--List of Skills I've Learned.-->
-		<ul>
-			<li>Programming with Python and C++.</li>
-			<li>Sculpting figurines with polymer clay.</li>
-			<li>Designing and creating cartoon and anime style characters.</li>
-			<li>Using software such as Inkscape and Adobe Illustrator to create digital artwork.</li>
-			<li>Manipulating images with Photoshop and FireAlpaca.</li>
-			<li>Speaking Spanish.</li>
-		</ul>
+			<ul>
+				<li>Programming with Python and C++.</li>
+				<li>Sculpting figurines with polymer clay.</li>
+				<li>Designing and creating cartoon and anime style characters.</li>
+				<li>Using software such as Inkscape and Adobe Illustrator to create digital artwork.</li>
+				<li>Manipulating images with Photoshop and FireAlpaca.</li>
+				<li>Speaking Spanish.</li>
+			</ul>
+		</section>
 
 <!--Footer-->
 		<footer>
 <!--Date Written-->
-		Written By: Alan Hernandez<br />Date Written: June 28, 2023
+		Written By: Alan Hernandez<br />Date Written: June 28, 2023<br />Date Modified: June 30, 2023
 		<br />Email: <a href="mailto:FellowHumanBeing@Email.com">FellowHumanBeing@Email.com</a>
 		</footer>
 	</body>
