--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <!--Page Head Title, and Metadata-->
 	<head>
-		<title>Alan Hernandez, Main</title>
 		<meta name="keywords" content="Alan, Home, Main"/>
 		<meta charset="UTF-8" />
+		<link href="main.css" rel="stylesheet">
+		<title>Alan Hernandez, Main</title>
 	</head>
 
 <!--Page Body-->
 	<body>
 <!--Main Header-->
-		<h1>Alan Hernandez</h1>
+		<header><h1>Alan Hernandez</h1></header>
 <!--Navigation Menu-->
 		<nav>
 			<ul>
@@ -20,31 +21,38 @@
 				<li><a href="#">School</a></li>
 			</ul>
 		</nav>
-<!--Second Header-->
-		<h2>Welcome!</h2>
-<!--A Paragraph About Alan Hernandez "Hey, that's me!"-->
-		<p>
-		Hello, my name is Alan and this is my 2nd year as a student at Cerritos College. I am currently working to obtain my certificate in client-side web development.<br />
-		On my journey to obtain my certification, I have learned about Python, C++, as well as some other basics of Web development. However, when it comes to HTML and CSS,<br />
-		I only have a little bit of experience from high school. But despite my limited knowledge of HTML, I do understand how to modify website text using the inspect element feature.<br />
-		One thing I enjoy doing with my coding skills, is making my own video game prototypes (in my free time).
-		</p>
 
+<!--Section 01-->
+		<section>
+<!--Second Header-->
+			<h2>Welcome!</h2>
+<!--A Paragraph About Alan Hernandez "Hey, that's me!"-->
+			<p>
+			Hello, my name is Alan and this is my 2nd year as a student at Cerritos College. I am currently working to obtain my certificate in client-side web development.<br />
+			On my journey to obtain my certification, I have learned about Python, C++, as well as some other basics of Web development. However, when it comes to HTML and CSS,<br />
+			I only have a little bit of experience from high school. But despite my limited knowledge of HTML, I do understand how to modify website text using the inspect element feature.<br />
+			One thing I enjoy doing with my coding skills, is making my own video game prototypes (in my free time).
+			</p>
+		</section>
+
+<!--Section 02-->
+		<section>
 <!--Third Header-->
-		<h3>When I Have Free Time</h3>
-<!--List of Activities I Enjoy-->
-		<ol>
-			<li>I like to play video games.</li>
-			<li>Draw cartoons and sculpt clayfigures.</li>
-			<li>Spend time with my family and my pets.</li>
-		</ol>
+			<h3>When I Have Free Time</h3>
+<!--List of Activities I Enjoy.-->
+			<ol>
+				<li>I like to play video games.</li>
+				<li>Draw cartoons and sculpt clayfigures.</li>
+				<li>Spend time with my family and my pets.</li>
+			</ol>
 <!--Alan's Favorite Website-->
-		<p>My favorite website is <a href="https://ahart16.wordpress.com/">AH Art</a>, I think it's pretty cool.</p>
+			<p>My favorite website is <a href="https://ahart16.wordpress.com/">AH Art</a>, I think it's pretty cool.</p>
+		</section>
 
 <!--Footer-->
 		<footer>
 <!--Date Written-->
-		Written By: Alan Hernandez<br />Date Written: June 23, 2023<br />Date Modified: June 28, 2023
+		Written By: Alan Hernandez<br />Date Written: June 23, 2023<br />Date Modified: June 30, 2023
 		<br />Email: <a href="mailto:FellowHumanBeing@Email.com">FellowHumanBeing@Email.com</a>
 		</footer>
 	</body>
