--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="#">School</a></li>
+				<li><a href="art.html">My Artwork</a></li>
 			</ul>
 		</nav>
 
 <!--Section 01-->
-		<section>
+		<section id="left">
 <!--Second Header-->
 			<h2>Goals</h2>
 <!--A List of my Academic Goals.-->
@@ -37,14 +37,14 @@
 		</section>
 
 <!--Section 02-->
-		<section>
+		<section id="right">
 <!--Third Header-->
 			<h3>Skills</h3>
 <!--List of Skills I've Learned.-->
 			<ul>
 				<li>Programming with Python and C++.</li>
 				<li>Sculpting figurines with polymer clay.</li>
-				<li>Designing and creating cartoon and anime style characters.</li>
+				<li>Designing and creating cartoon and animé style characters.</li>
 				<li>Using software such as Inkscape and Adobe Illustrator to create digital artwork.</li>
 				<li>Manipulating images with Photoshop and FireAlpaca.</li>
 				<li>Speaking Spanish.</li>
@@ -54,7 +54,7 @@
 <!--Footer-->
 		<footer>
 <!--Date Written-->
-		Written By: Alan Hernandez<br />Date Written: June 28, 2023<br />Date Modified: June 30, 2023
+		Written By: Alan Hernandez<br />Date Written: June 28, 2023<br />Date Modified: July 08, 2023
 		<br />Email: <a href="mailto:FellowHumanBeing@Email.com">FellowHumanBeing@Email.com</a>
 		</footer>
 	</body>
