--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="#">School</a></li>
+				<li><a href="art.html">My Artwork</a></li>
 			</ul>
 		</nav>
 
 <!--Section 01-->
-		<section>
+		<section id="left">
 <!--Second Header-->
 			<h2>Welcome!</h2>
 <!--A Paragraph About Alan Hernandez "Hey, that's me!"-->
@@ -36,7 +36,7 @@
 		</section>
 
 <!--Section 02-->
-		<section>
+		<section id="right">
 <!--Third Header-->
 			<h3>When I Have Free Time</h3>
 <!--List of Activities I Enjoy.-->
@@ -52,7 +52,7 @@
 <!--Footer-->
 		<footer>
 <!--Date Written-->
-		Written By: Alan Hernandez<br />Date Written: June 23, 2023<br />Date Modified: June 30, 2023
+		Written By: Alan Hernandez<br />Date Written: June 23, 2023<br />Date Modified: July 08, 2023
 		<br />Email: <a href="mailto:FellowHumanBeing@Email.com">FellowHumanBeing@Email.com</a>
 		</footer>
 	</body>
